# codex

./: PLAN.md
codex-rs/: Cargo.toml
codex-rs/cli/src/: lsp_cmd.rs  main.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: codex.rs  codex_tests.rs  features.rs  lib.rs  lsp_runtime.rs
codex-rs/core/src/config/: config_tests.rs  lsp.rs  mod.rs  types.rs
codex-rs/core/src/state/: service.rs
codex-rs/core/src/tools/: lsp_enrichment.rs  mod.rs  spec.rs
codex-rs/core/src/tools/handlers/: apply_patch.rs  lsp.rs  mod.rs  read_file.rs  shell.rs
codex-rs/core/src/unified_exec/: mod.rs  process_manager.rs
codex-rs/lsp/: BUILD.bazel  Cargo.toml
codex-rs/lsp/src/: client.rs  lib.rs  manager.rs  normalize.rs  protocol.rs  types.rs  util.rs
docs/: config.md  lsp.md
