[package]
edition.workspace = true
license.workspace = true
name = "codex-lsp"
version.workspace = true

[lib]
doctest = false
name = "codex_lsp"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt",
    "sync",
    "time",
] }
tracing = { workspace = true }
url = { workspace = true }
which = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
